# Synavis

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTION.md  CONTRIBUTIONS.md  LICENSE.txt  README.md  SECURITY.md  cmake_install.bat  cmake_install.ps1  cmake_install.sh  config.json  ffmpeg_configure_command.sh  ffmpeg_start.bat  libdatachanneldeps.cmake  libdir.py  module_test.py  output.mkv  pixelstreaming.sdp  pyproject.toml  pyrightconfig.json  sdp.txt  signalling_server.py  tensorworks.sdp  verify_datachannel.cmake
.github/workflows/: cmake.yml  wheels.yml
SynavisBackend/: SynavisBackend.uplugin  scheme.excalidraw
SynavisBackend/Source/SynavisBackend/: SynavisBackend.Build.cs  SynavisBackend.cpp  SynavisBackend.h
SynavisBackend/Source/SynavisBackend/Private/: ConvertRGBAToI420.usf  ConvertRGBAToI420_CS.usf  SynavisBackend.cpp  SynavisStreamer.cpp  SynavisStreamerComputeShader.cpp  SynavisStreamerComputeShader.h  SynavisStreamerGlobalShader.cpp  SynavisStreamerGlobalShader.h  SynavisStreamerRendering.cpp
SynavisBackend/Source/SynavisBackend/Public/: SynavisBackend.h  SynavisStreamer.h  SynavisStreamerRendering.h
SynavisUE/: .gitignore  README.md  SynavisUE.uplugin
SynavisUE/Config/: DefaultSynavisUE.ini
SynavisUE/Content/: BPPlantParts.uasset  BP_SynavisDrone.uasset  Black.uasset  DepthMaterial.uasset  DualViewPrint.uasset  EnsureDimensionality.uasset  InfoMaterial.uasset  InfoReceiver.uasset  InfoStreamer.uasset  InfoTarget.uasset  Pipelinesink.uasset  SampleAnswersMaterial.uasset  SceneMaterial.uasset  SceneReceiver.uasset  SceneTarget.uasset  SegmentationMaterial.uasset  SegmentedSceneview.uasset  ServiceMaterial.uasset  SingleView.uasset  StandardMaterial.uasset  SteeringMaterial.uasset  SunSkyCloud.uasset  SynVolumentricCloud.uasset  TerrainMaterial.uasset  UHDScene.uasset
SynavisUE/Content/TextureBases/: scene_1024.uasset  scene_128.uasset  scene_2048.uasset  scene_256.uasset  scene_4096.uasset  scene_512.uasset  target_1024.uasset  target_128.uasset  target_2048.uasset  target_256.uasset  target_4096.uasset  target_512.uasset
SynavisUE/Source/SynavisUE/: SynavisUE.Build.cs
SynavisUE/Source/SynavisUE/Private/: Aggregator.cpp  ClusterInstance.cpp  DataCamera.cpp  DroneBehavior.cpp  JSONInterfaceGameMode.cpp  MovementBehavior.cpp  PlantCycleActor.cpp  PlantParts.cpp  SpawnTarget.cpp  SynavisDrone.cpp  SynavisUE.cpp  VTPMeshFactory.cpp  WorldSpawner.cpp
SynavisUE/Source/SynavisUE/Public/: Aggregator.h  ClusterInstance.h  DataCamera.h  DroneBehavior.h  JSONInterfaceGameMode.h  MovementBehavior.h  PlantCycleActor.h  PlantParts.h  SpawnTarget.h  SynavisDrone.h  SynavisUE.h  VTPMeshFactory.h  WorldSpawner.h
accessor/: CMakeLists.txt  connector.cpp  connector.hpp  seeker.cpp  seeker.hpp
bridge/: CMakeLists.txt
cmake/: copy_if_exists.cmake
externtest/: CMakeLists.txt  externtest.cpp
native_modules/av_extraction/: CMakeLists.txt  main.cpp
native_modules/bridge_establishment/: config.json  main.cpp
native_modules/clientduplicate/: main.cpp
native_modules/connection_establishment/: main.cpp
native_modules/dual_webrtc_endpoint_test/: main.cpp
native_modules/image_extraction/: CMakeLists.txt  main.cpp
native_modules/photosynthesis/: CMakeLists.txt  main.cpp
native_modules/signalling_connection/: main.cpp
native_modules/simple_webrtc_endpoint/: main.cpp
native_modules/socket_establishment/: CMakeLists.txt  main.cpp
native_modules/socket_establishment_receiver/: CMakeLists.txt  main.cpp
native_modules/test_base64/: CMakeLists.txt
native_modules/test_logger/: main.cpp
native_modules/vpx_extraction/: CMakeLists.txt  main.cpp
packagers/scikit_build_wrapper/: pyproject.toml
packagers/scikit_build_wrapper/scikit_build_wrapper/: build_backend.py
python/coupling/: chamber.py  characterization.py  cpb_test.py  cplantbox_coupling.py  cplantbox_coupling_direct_only.py  demo_video_coupling.py  eval.ipynb  hard_scaling.py  job.sh  performance_view.py  photosynthesis.py  photosynthesis_leuning.py  test.py  track_ue.sh  video_scaling_coupling.py
python/modules/: DataTransmission.py  MinimalWebRTC.py  SimulationCoupling.py  SocketTest.py  Startup.py  TFUnrealReceiver.py  Timing.py  TorchUnrealReceiver.py  UnrealFrametimings.py  UnrealReceiver.py  WebRTCParser.py  config.json  extraction.py  gstreamer.py  module_test.py  runfile_signalling.bat  signalling_server.py  signalling_server_testrun.bat
python/synavis/: __init__.py
receiver/: CMakeLists.txt  Provider.cpp  Provider.h  PyUnrealReceiver.cpp  UnrealReceiver.cpp  UnrealReceiver.h  main.cpp
synavis/: Adapter.cpp  Adapter.hpp  CMakeLists.txt  Connector.cpp  Connector.hpp  DataConnector.cpp  DataConnector.hpp  FrameDecode.cpp  FrameDecode.hpp  FrameDecodeAV.cpp  FrameDecodeAV.hpp  MediaReceiver.cpp  MediaReceiver.hpp  Provider.cpp  Provider.hpp  PySynavis.cpp  Seeker.cpp  Seeker.hpp  Synavis.cpp  Synavis.hpp  UnrealConnector.cpp  UnrealConnector.hpp  UnrealReceiver.cpp  UnrealReceiver.hpp  streamhandler.hpp
tools/: build_wheel.ps1  build_wheel.sh  build_wheel_with_ffmpeg.ps1  dependency_inject.py
unrealbridge/: CMakeLists.txt
webrtcbridge/: Adapter.cpp  Adapter.hpp  CMakeLists.txt  Connector.cpp  Connector.hpp  DataConnector.cpp  DataConnector.hpp  MediaReceiver.cpp  MediaReceiver.hpp  Provider.cpp  Provider.hpp  PyWebRTCBridge.cpp  Seeker.cpp  Seeker.hpp  UnrealConnector.cpp  UnrealConnector.hpp  UnrealReceiver.cpp  UnrealReceiver.hpp  WebRTCBridge.cpp  WebRTCBridge.hpp  connector.cpp  connector.hpp  seeker.cpp  seeker.hpp  streamhandler.hpp
